--- a/project.ipynb
+++ b/project.ipynb
@@ -12,9 +12,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "disease_data = pd.read_csv(\"heart_disease_data.csv\")\n",
-    "columns = disease_data.columns.tolist()\n",
-    "columns = columns[:len(columns)-1]\n",
-    "features = disease_data[columns]\n",
+    "features = disease_data.drop('target', axis=1)\n",
     "label = disease_data['target']\n",
     "\n",
     "# our model for making predictions\n",
